--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,11 @@ body {
 html, body {
     min-height: 100vh;
 }
+@media (max-width: 768px) {
+    body {
+        height:100vh;
+    }
+}
 body::after {
     content: "";
     background-image: url(../images/stars.png);
