--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
 }
 html, body {
     min-height: 100vh;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 @media (max-width: 900px) {
     body {
