--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,8 @@ body {
 html, body {
     min-height: 100vh;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 @media (max-width: 900px) {
     body {
