--- a/styles/style.css
+++ b/styles/style.css
@@ -1,49 +1,137 @@
-html {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    letter-spacing: 1.5px;
-    font-size: 15px;
-    text-align: center;
-}
-body {
-    background-color: rgb(214, 211, 186);
-    background-image: url(../images/stars.png);
-    background-blend-mode: multiply;
-    background-size: contain;
-    color:aliceblue;
-}
-html, body {
-    min-height: 100vh;
+* {
+    box-sizing: border-box;
+  }
+
+  html {
+    font: 1.2em/1.4 Arial, Helvetica, sans-serif;
+  }
+
+  body {
+    padding: 0 0 1em;
+  }
+
+  header {
+    background-color: #333;
+    color: #fff;
+    border: 5px solid #000;
+  }
+
+  header ul {
+    list-style: none;
     margin: 0;
     padding: 0;
+    text-align: center;
+  }
+
+  header li {
+    display:inline-block;
+    width: 32vw;
+  }
+
+  header li:nth-child(2) {
+    border-right: 3px solid #999;
+    border-left: 3px solid #999;
+  }
+
+  @media screen and (max-width: 1000px) {
+    header li {
+      width: 30vw;
+  }
+  
+   }
+  @media screen and (max-width: 370px) {
+    header li {
+      width: 28vw;
+    }
+  }
+
+  header a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    padding: 0.5em 1em;
+  }
+
+  header .title {
+    font-size: 150%;
+    font-style: italic;
+    font-weight: bold;
+    padding: 1em;
+    text-align:center;
+  }
+
+  main {
+    padding: 0 1em;
+  }
+
+  .cards {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .cards li {
+    border: 5px solid #000;
+    margin-bottom: 1em;
+  }
+
+  .cards h2 {
+    background-color: #333;
+    color: #fff;
+    margin: 0;
+    padding: 0.5em 1em;
+  }
+
+  .cards .inner {
+    padding: 0.5em 1em;
+  }
+
+  .sidebar {
+    background-color: #333;
+    border: 5px solid #000;
+    padding: 0.5em 1em;
+    color: #fff;
 }
-table {
-    vertical-align: center;
-    border-collapse:collapse;
-    text-shadow: 1px 1px 1px black;
-}
-caption {
-    font-size: 1.5em;
-    padding: 15px;
-    letter-spacing: 1px;
-    text-shadow: 0.5px 0.5px rgb(0,107,71);
-}
-th {
-    border: 2px solid rgb(74, 212, 185);
-    background-color: rgb(4,117,80);
-    opacity: 0.9;
+
+@media screen and (min-width: 1500px) {
+  html {
     font-size: 1.3em;
-    padding: 15px;
+  }
+  main {
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+  article {
+    grid-column: 1/5;
+  }
+  .cards {
+    display:flex;
+    flex: 1;
+    flex-flow: row wrap;
+  }
+  .cards li {
+    display:flex;
+    flex:1 250px;
+    flex-flow:column wrap;
+    margin: 20px;
+  }
+  .sidebar {
+    margin: 20px;
+    grid-column: 5/6;
+    font-size: 40px;
+    height: 570px;
+  }
 }
-td {
-    border: 1px solid rgb(74, 212, 185);
-    background-color: rgb(0,153,101);
-    opacity: 0.9;
-    font-size: 1.2em;
-    padding: 15px;
-}
-tr:nth-child(odd) td {
-    background-color: rgb(0,198,132);
-}
-a:link, a:visited {
-    color:rgb(161, 248, 144);
+@media screen and (min-width: 800px) {
+  .cards {
+    display:flex;
+    flex: 1;
+    flex-flow:row wrap;
+  }
+  .cards li {
+    display:flex;
+    flex:1 250px;
+    flex-flow:column wrap;
+    margin: 20px;
+  }
 }
