--- a/styles/style.css
+++ b/styles/style.css
@@ -1,138 +1,135 @@
-/* general setup */
+/* General setup */
+
 * {
     box-sizing: border-box;
   }
-
-  html {
-    font: 1.2em/1.4 Arial, Helvetica, sans-serif;
-  }
-
+  
   body {
-    padding: 0 0 1em;
-  }
-  /* top bar */
-  header {
-    background-color: #333;
-    color: #fff;
-    border: 5px solid #000;
-  }
-
-  header ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-
-  header li {
-    display:inline-block;
-    width: 32vw;
-  }
-
-  header li:nth-child(2) {
-    border-right: 3px solid #999;
-    border-left: 3px solid #999;
-  }
-
-  @media screen and (max-width: 1000px) {
-    header li {
-      width: 30vw;
+    margin: 0 auto;
+    min-width: 1000px;
+    max-width: 1400px;
   }
   
-   }
-  @media screen and (max-width: 370px) {
-    header li {
-      width: 28vw;
-    }
+  /* Layout */
+  
+  section {
+    float: left;
+    width: 50%;
+  }
+  
+  aside {
+    float: left;
+    width: 30%;
+  }
+  
+  nav {
+    float: left;
+    width: 20%;
+  }
+  
+  footer {
+    clear: both;
+  }
+  
+  header, section, aside, nav, footer {
+    padding: 20px;
+  }
+  
+  /* header and footer */
+  
+  header, footer {
+    border-top: 5px solid #a66;
+    border-bottom: 5px solid #a66;
+  }
+  
+  /* WRITE YOUR CODE BELOW HERE */
+
+  html {
+    font-family: 'fira_sansmedium';
+    font-size: 17.5px;
+    letter-spacing: 1.1px;
+    word-spacing: 1.3px;
   }
 
-  header a {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    padding: 0.5em 1em;
-  }
+  /* General text setup */
 
-  header .title {
-    font-size: 150%;
-    font-style: italic;
-    font-weight: bold;
-    padding: 1em;
+  h1 {
+    font-family: 'kaushan_scriptregular';
+    font-size: 2.5em;
     text-align:center;
   }
-  /* middle part */
-  main {
-    padding: 0 1em;
+  h2 {
+    font-family: 'fira_sansbold';
+  }
+  p, a, ul, ol {
+    line-height: 1.4em;
+  }
+  section h2 + p {
+    padding-top: 20px;
+  }
+  ul {
+    list-style-type: decimal;
   }
 
-  .cards {
-    list-style: none;
-    margin: 0;
+  /* Links */
+
+  a[href*="http"] {
+    background: url(https://mdn.github.io/learning-area/css/styling-text/typesetting-a-homepage-start/external-link-52.png) no-repeat 100% 0;
+    background-size: 12px 12px;
+    padding-right: 15px;
+  }
+  a {
+    outline: none;
+    text-decoration: none;
+    padding: 2px 1px 1px;
+    border-bottom: 1px solid rgb(216, 52, 11);
+  }
+  a:link {
+    color: rgb(216, 52, 11);
+  }
+  a:visited {
+    color: rgb(105, 9, 9);
+  }
+  a:focus {
+    background-color: rgb(255, 204, 170);
+    border-bottom: 0px;
+  }
+  a:hover {
+    background-color: rgb(255, 204, 170);
+    border-bottom: 0px;
+  }
+  a:active {
+    background-color: rgb(219, 107, 88);
+  }
+
+  /* Right nav buttons */
+
+  nav ul {
     padding: 0;
+    width: 100%;
+    list-style-type: none;
   }
-
-  .cards li {
-    border: 5px solid #000;
-    margin-bottom: 1em;
+  nav a {
+    outline: none;
+    text-decoration: none;
+    border: 0;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    margin-bottom:40px;
+    line-height: 80px;
+    background-color: rgb(247, 240, 235);
+    border: 3px solid rgb(105, 9, 9);
   }
-
-  .cards h2 {
-    background-color: #333;
-    color: #fff;
-    margin: 0;
-    padding: 0.5em 1em;
+  nav a:link, nav a:visited, nav a:focus {
+    border: 3px solid rgb(105, 9, 9);
+    color: rgb(216, 52, 11);
+    text-shadow: 1px 1px rgb(0, 0, 0);
+    font-family: 'fira_sansitalic';
+    font-size: 1.2em;
   }
-
-  .cards .inner {
-    padding: 0.5em 1em;
+  nav a:hover {
+    border: 3px solid rgb(105, 9, 9);
+    background-color: rgb(224, 178, 156);
+    text-shadow: 1px 1px rgb(235, 231, 231);
   }
-
-  .sidebar {
-    background-color: #333;
-    border: 5px solid #000;
-    padding: 0.5em 1em;
-    color: #fff;
-}
-
-@media screen and (min-width: 1500px) {
-  html {
-    font-size: 1.3em;
-  }
-  main {
-    display:grid;
-    grid-template-columns: repeat(5, 1fr);
-  }
-  article {
-    grid-column: 1/5;
-  }
-  .cards {
-    display:flex;
-    flex: 1;
-    flex-flow: row wrap;
-  }
-  .cards li {
-    display:flex;
-    flex:1 250px;
-    flex-flow:column wrap;
-    margin: 20px;
-  }
-  .sidebar {
-    margin: 20px;
-    grid-column: 5/6;
-    font-size: 40px;
-    height: 570px;
-  }
-}
-@media screen and (min-width: 800px) {
-  .cards {
-    display:flex;
-    flex: 1;
-    flex-flow:row wrap;
-  }
-  .cards li {
-    display:flex;
-    flex:1 250px;
-    flex-flow:column wrap;
-    margin: 20px;
-  }
-}
